--- a/ko.html
+++ b/ko.html
@@ -250,10 +250,10 @@ Chapter 7, Example 2l, p.288</a>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="bGluZ3Vpc3RpY3M=" data-listing-date-sort="1747234800000" data-listing-file-modified-sort="1747311745700" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="294">
+<div class="quarto-post image-right" data-index="1" data-categories="bGluZ3Vpc3RpY3M=" data-listing-date-sort="1747234800000" data-listing-file-modified-sort="1747652420389" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="291">
 <div class="thumbnail">
 <p><a href="./posts/ko/250515_네덜란드어_감탄문/index.html" class="no-external"></a></p><a href="./posts/ko/250515_네덜란드어_감탄문/index.html" class="no-external">
-<p class="card-img-top"><img src="posts/ko/250515_네덜란드어_감탄문/따뜻한 미소를 지닌 초상.png"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="posts/ko/250515_네덜란드어_감탄문/따뜻한_미소를_지닌_초상.png"  class="thumbnail-image card-img"/></p>
 </a><p><a href="./posts/ko/250515_네덜란드어_감탄문/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
